<resources>
    <string name="app_name">iTV</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_image">sample image</string>
    <string name="capture">Capture</string>
    <string name="ivTextSample">Image Text</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="test">Test</string>
    <string name="date">Date</string>
    <string name="sample_date">August 9, 2020</string>
    <string name="current_calorie_count">Current Calorie Count</string>
    <string name="remaining_calorie_count">Remaining Calorie Count</string>
    <string name="_3000">3000</string>
    <string name="_1000">1000</string>
    <string name="sample_food_image">Sample Food Image</string>
    <string name="salad">Salad</string>
    <string name="item">Item</string>
    <string name="description">Description</string>
    <string name="tacos">Tacos</string>
    <string name="calories">Calories</string>
    <string name="save">Save</string>
    <string name="today_s_food_log">Today\'s Food Log</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="take_image">Take Image</string>
    <string name="today_s_food_log_title">Today\'s Food Log</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="details">Details</string>
    <string name="_0_4g">0.4g</string>
    <string name="_2_4g">2.4g</string>
    <string name="fiber">Fiber</string>
    <string name="_2_5g">2.5g</string>
    <string name="_31g">31g</string>
    <string name="save_image_to_db">save image to db</string>
    <string name="name">Name</string>
    <string name="post">Post</string>
    <string name="carbs">carbs</string>
    <string name="confirming_content">Confirming Content</string>
    <string name="sample_background_image_for_start_page">Sample Background Image for start page</string>
    <string name="welcome">Welcome</string>
    <string name="nice_to_see_you_again">Nice to see you again</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="need_help">Need Help?</string>
    <string name="hello_there">Hello There!</string>
    <string name="back_arrow">back arrow</string>
    <string name="create_post">create post</string>
    <string name="upload_image">Upload Image</string>
    <string name="contact_us_at_itv_dev_gmail_com">Contact Us at chill.dev03@gmail.com</string>
    <string name="version_0_1">Version 0.1</string>
    <string name="about_us">About Us</string>
    <string name="itv_2021">ChillCalories @ 2021</string>
    <string name="update_profile">Update Profile</string>
    <string name="streaks">Streaks</string>
    <string name="record">Record</string>
    <string name="profile">Profile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="itv">iTV</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="meals">Meals</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_meals">My Meals</string>
    <string name="reset">Reset</string>
    <string name="chill_calories">Chill Calories</string>
    <string name="chill_calories_2022">Chill Calories @ 2022</string>
    <string name="contact_us_at_chill_dev_gmail_com">Contact us at Chill_dev@gmail.com</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="serving">Serving</string>
    <string name="fat">Fat</string>
    <string name="ingredients">Ingredients</string>
    <string name="_200">200</string>
    <string name="_1_2_cup_olive_oil_5_cloves_garlic_peeled_2_large_russet_potatoes_peeled_and_cut_into_chunks_1_3_4_pound_chicken_cut_into_8_pieces_or_3_pound_chicken_legs_3_4_cup_white_wine_3_4_cup_chicken_stock_3_tablespoons_chopped_parsley_1_tablespoon_dried_oregano_salt_and_pepper_1_cup_frozen_peas_thawed">1/2 cup olive oil, 5 cloves garlic, peeled, 2 large russet potatoes, peeled and cut into chunks, 1 3-4 pound chicken, cut into 8 pieces (or 3 pound chicken legs), 3/4 cup white wine, 3/4 cup chicken stock, 3 tablespoons chopped parsley, 1 tablespoon dried oregano, Salt and pepper, 1 cup frozen peas, thawed</string>
    <string name="_10min">10min</string>
    <string name="time">Time:</string>
    <string name="sample_recipe_image">Sample Recipe Image</string>
    <string name="recipe">Recipe</string>
    <string name="food_log"> Food Log</string>
    <string name="cereal">Cereal</string>
    <string name="serving_size">Serving Size:</string>
    <string name="_1">1</string>
    <string name="calorie">Calorie:</string>
    <string name="protein_">Protein:</string>
    <string name="carbs_">Carbs:</string>
    <string name="fat_">Fat:</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="back_image">back image</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="weight_tracker">Weight Tracker</string>
    <string name="submit">Submit</string>
    <string name="search_meal_ex_pizza">Search Meal: ex Pizza</string>
    <string name="enter_meal">Enter Meal</string>
    <string name="your_serving_size_ex_2">Your Serving Size: ex 2</string>
    <string name="search_meal">Search Meal</string>
    <string name="progress">Progress</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="max">Max</string>
    <string name="add_weight_btn">add weight btn</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="taco">Taco</string>
    <string name="_100">100</string>
    <string name="_03_08_2022">03/08/2022</string>
    <string name="_130_lbs">130 lbs</string>
    <string name="gained_10_lbs">Gained 10 lbs</string>
    <string name="_500_calories">500 calories</string>
    <string name="please_add_a_meal_by_selecting_the_green_button_so_we_can_record_your_meals">Please add a meal by selecting the green button.So we can record your meals.</string>
    <string name="_5_26_food_log">5/26 Food Log</string>
    <string name="protein">Protein</string>
    <string name="carbs_c">Carbs</string>
    <string name="cal_left">Cal Left</string>
    <string name="unable_to_find_image">unable to find image</string>
    <string name="no_meal_found">No Meal Found</string>
</resources>