<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".image.ImageUploadFragment">

    <Button
        android:id="@+id/btnSub"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="51dp"
        android:text="@string/sign_out" />

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUpdateeProfile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="34dp"
        android:text="@string/contact_us_at_itv_dev_gmail_com"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvContact"
        android:layout_alignParentStart="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="42dp"
        android:text="@string/version_0_1" />

    <Button
        android:id="@+id/btnAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSub"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="14dp"
        android:text="@string/about_us" />

    <TextView
        android:id="@+id/tvCopyRight"
        android:layout_width="155dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="62dp"
        android:layout_toStartOf="@+id/btnSub"
        android:text="@string/itv_2021"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvUpdateeProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="23dp"
        android:text="@string/update_profile" />

</RelativeLayout>