<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="33dp"
        android:contentDescription="@string/back_arrow"
        app:srcCompat="@drawable/back_arrow" />

    <EditText
        android:id="@+id/etPasword"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:layout_below="@+id/etUserName"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/input_text"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textWebPassword"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:layout_below="@+id/tvLoginTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_text"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/etPasword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="27dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tvHelp"
        android:layout_width="129dp"
        android:layout_height="26dp"
        android:layout_below="@+id/etPasword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="53dp"
        android:text="@string/need_help"
        android:textColor="#D81B60" />

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="100dp"
        android:text="@string/hello_there"
        android:textSize="34sp" />
</RelativeLayout>