<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DailyMealFragment">

    <TextView
        android:id="@+id/tvDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/tvCurrentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/tvDateTitle"
        android:text="@string/sample_date" />

    <TextView
        android:id="@+id/tvTotalCalorieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDateTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="15dp"
        android:text="@string/current_calorie_count" />

    <TextView
        android:id="@+id/tvRemainingCalorieCountTitle"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTotalCalorieTitle"
        android:layout_alignBottom="@+id/tvTotalCalorieTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-18dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="1dp"
        android:layout_toEndOf="@+id/tvTotalCalorieTitle"
        android:text="@string/remaining_calorie_count" />

    <TextView
        android:id="@+id/tvTotalCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTotalCalorieTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/_3000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvRemaingCalorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRemainingCalorieCountTitle"
        android:layout_alignBottom="@+id/tvTotalCalories"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="0dp"
        android:text="@string/_1000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvTodaysMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTotalCalories"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="25dp"
        android:text="@string/today_s_food_log" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTodaysMeal"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="0dp"
        android:padding="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDailyFood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            tools:listitem="@layout/user_food_item" />

    </RelativeLayout>

</RelativeLayout>

