<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".StarterActivity">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/sample_background_image_for_start_page"
        android:scaleType="center"
        app:srcCompat="@drawable/background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="34dp"
            android:layout_marginTop="36dp"
            android:text="@string/welcome"
            android:textColor="#FFFFFF"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/tvWelDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWelcome"
            android:layout_alignParentStart="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="11dp"
            android:text="@string/nice_to_see_you_again"
            android:textColor="@color/lightgrey"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="162dp"
            android:layout_height="53dp"
            android:layout_below="@+id/tvWelDesc"
            android:layout_alignParentStart="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="19dp"

            android:background="@drawable/button"
            android:shadowColor="@color/fusia"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="162dp"
            android:layout_height="53dp"
            android:layout_below="@+id/btnLogin"
            android:layout_alignParentStart="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="25dp"

            android:background="@drawable/button"
            android:shadowColor="@color/fusia"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </RelativeLayout>
</RelativeLayout>